--- a/pipeline/.github/workflows/ci-cd.yml
+++ b/pipeline/.github/workflows/ci-cd.yml
@@ -3,10 +3,10 @@ name: CI/CD for Nginx Docker Application
 on:
   push:
     branches:
-      - main
+      - pipeline
   pull_request:
     branches:
-      - main
+      - pipeline
 
 jobs:
   build:
